cmake_minimum_required(VERSION 2.8)

add_subdirectory(Sorting)
add_subdirectory(MaxSubArray)
add_subdirectory(MaxSubArray/_unit)
add_subdirectory(BitSet)
add_subdirectory(BitSet/_unit)
add_subdirectory(HackerRank)
add_subdirectory(DynamicProgramming)


add_subdirectory(SampleApp)
add_subdirectory(SampleApp/_unit)
add_subdirectory(RomanNumerals)
add_subdirectory(RomanNumerals/_unit)
add_subdirectory(CPlusPlus)
add_subdirectory(CodeKatas)
