project(GeneralCPP)
cmake_minimum_required(VERSION 2.8)

SET (SRC_LIST
GeneralCPP.cpp
GeneralCPP.h
TestConstExpr.h
TestConstExpr.cpp
)

add_library(${PROJECT_NAME} SHARED ${SRC_LIST})

INSTALL(
TARGETS ${PROJECT_NAME}
ARCHIVE DESTINATION lib
LIBRARY DESTINATION lib
RUNTIME DESTINATION bin
COMPONENT ${PROJECT_NAME}
)
